# src/api/swagger.yaml
@@ -21,7 +21,7 @@ paths:
       tags: [Users]
       summary: Get all users
       responses:
-        '200':
+        "200":
           description: List of users
           content:
             application/json:
@@ -45,7 +45,7 @@ paths:
             schema:
               $ref: "#/components/schemas/UserCreate"
       responses:
-        '200':
+        "200":
           description: User created
           content:
             application/json:
@@ -57,21 +57,21 @@ paths:
                     example: success
                   data:
                     $ref: "#/components/schemas/UserDTO"
-        '409':
+        "409":
           description: Email or username already exists
 
-  /users/{user_id}:
+  /users/{id}:
     get:
       tags: [Users]
       summary: Get user by ID
       parameters:
         - in: path
-          name: user_id
+          name: id
           required: true
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: User found
           content:
             application/json:
@@ -83,14 +83,14 @@ paths:
                     example: success
                   data:
                     $ref: "#/components/schemas/UserDTO"
-        '404':
+        "404":
           description: User not found
     put:
       tags: [Users]
       summary: Update user by ID
       parameters:
         - in: path
-          name: user_id
+          name: id
           required: true
           schema:
             type: string
@@ -101,7 +101,7 @@ paths:
             schema:
               $ref: "#/components/schemas/UserUpdate"
       responses:
-        '200':
+        "200":
           description: User updated
           content:
             application/json:
@@ -113,19 +113,19 @@ paths:
                     example: success
                   data:
                     $ref: "#/components/schemas/UserDTO"
-        '404':
+        "404":
           description: User not found
     delete:
       tags: [Users]
       summary: Delete user by ID
       parameters:
         - in: path
-          name: user_id
+          name: id
           required: true
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: User deleted
           content:
             application/json:
@@ -137,7 +137,7 @@ paths:
                     example: success
                   data:
                     type: "null"
-        '404':
+        "404":
           description: User not found
 
 components:
@@ -145,7 +145,7 @@ components:
     UserDTO:
       type: object
       properties:
-        user_id:
+        id:
           type: string
           example: 40cf2348-d871-11ee-8a82-0242ac110002
         username:
